  navigation would occur in that tab, instead of a new tab. See
  #265.
- If a filtered item is renamed, it will now be shown again if it
  no longer needs to be filtered. Previously, the item would
  remain hidden until filtering was disabled.
- A saved dialog position will now only be used if the saved
  position is visible on screen.
- When renaming an item, the item is updated immediately if the
  rename succeeds. Previously, the item details would be updated
  a short time later. That meant that renaming an item, then
  immediately pressing enter would fail to open the item. See
  #281.
- Renaming virtual items in the treeview now works as expected.
- Pressing F2 wouldn't cycle between the filename and extension.
  See #293.
- Previously, when running the application under Windows PE, the
  treeview was empty.
- When selecting "Lock Tab", the tab acted as if "Lock Tab and
  Address" had been selected.
- Pasting an image from the clipboard wouldn't always generate a
  correct image file. See #307.
- The treeview now has both a minimum width and maximum width.
  This also means that in situations where the treeview width was
  previously reduced below 0, it will be shown again.
- When renaming an item in the listview or treeview,
  Ctrl+Backspace now erases the last word, rather than inserting
  a non-printable character. See #299.

Misc:
- ARM64 builds are now available.
- When changing the default file manager setting (via Tools >
  Options > General > Default File Manager), Explorer++ will only
  be set/removed as the default file manager for the current
  user. Previously, Explorer++ was set as the default for all
  users.
  If you set Explorer++ as the default in a previous version,
  remove it as the default before you update, then change it back
  to the default after you've updated.
- The HTML Help (chm) documentation has been removed. The help
  menu item now simply links to the online documentation, from
  which a PDF can be generated, if needed.